--- a/PizzaWebsite/appsettings.json
+++ b/PizzaWebsite/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": 
+    "DefaultConnection": "server=localhost; port=3306; user=root; database=pizza; password=; Persist Security Info=False; Connect Timeout=300"
   },
   "Logging": {
     "LogLevel": {
