--- a/PizzaWebsite/PizzaWebsite.csproj
+++ b/PizzaWebsite/PizzaWebsite.csproj
@@ -29,4 +29,6 @@
     <Folder Include="wwwroot\img\pizza-images\" />
   </ItemGroup>
 
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
+
 </Project>
